RESOLVED FIXED105485
Leak in StringImpl::createCFString()
https://bugs.webkit.org/show_bug.cgi?id=105485
Summary Leak in StringImpl::createCFString()
Jon Lee
Reported 2012-12-19 17:29:18 PST
Some crossed wires regarding CFString and RetainPtr leads to leaky hilarity.
Attachments
Patch (1.73 KB, patch)
2012-12-19 17:35 PST, Jon Lee
andersca: review+
Radar WebKit Bug Importer
Comment 1 2012-12-19 17:29:32 PST
Jon Lee
Comment 2 2012-12-19 17:29:42 PST
Jon Lee
Comment 3 2012-12-19 17:35:54 PST
Jon Lee
Comment 4 2012-12-19 17:42:08 PST
Note You need to log in before you can comment on or make changes to this bug.